hphp/hack/test/typecheck/reactive/rx_if_implements26.php.exp
File "rx_if_implements26.php", line 14, characters 12-26:
Shallow reactive functions cannot call non-reactive functions. (Typing[4218])
  File "rx_if_implements26.php", line 7, characters 19-27:
  This function is normal.
